--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.3",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
